# triangles_cpp

./: CMakeLists.txt  LICENSE  README.md
src/: OpenGLWindow.cpp  OpenGLWindow.h  TriangleWindow.cpp  TriangleWindow.h  main.cpp
